--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -15,6 +15,12 @@ Each implementation of DRS can choose its own id scheme, as long as it follows t
 * DRS v1 does NOT support semantics around multiple versions of an object. (For example, there’s no notion of “get latest version” or “list all versions”.) Individual implementation MAY choose an ID scheme that includes version hints.
 * DRS implementations MAY have more than one ID that maps to the same object.
 
+=== DRS URIs
+
+For convenience, including when passing content references to a WES server, we define a URI syntax for DRS-accessible content. Strings of the form `drs://<server>/<id>` mean “_you can fetch the DRS content with id `<id>` from the DRS server at `<server>`_ ".
+
+For example, if a WES server was asked to process `drs://drs.example.org/314159`, it would know that it could issue a GET request to `http://drs.example.org/ga4gh/drs/v1/objects/314159` to learn how to fetch that object.
+
 === DRS Datatypes
 
 DRS v1 supports two types of content:
@@ -25,12 +31,6 @@ DRS v1 supports two types of content:
 === Read-only
 
 DRS v1 is a read-only API. We expect that each implementation will define its own mechanisms and interfaces (graphical and/or programmatic) for adding and updating data.
-
-=== URI convention
-
-For convenience, including when passing content references to a WES server, we define a recommended URI syntax for DRS-accessible content. Strings of the form `drs://<server>/<id>` mean “_you can fetch the DRS content with id `<id>` from the DRS server at `<server>`_ ".
-
-For example, if a WES server was asked to process `drs://drs.example.org/314159`, it would know that it could issue a GET request to `http://drs.example.org/ga4gh/drs/v1/objects/314159` to learn how to fetch that object.
 
 === Standards
 
