--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -91,12 +91,12 @@ If this returns a 404 error we can then resolve this guid to find the appropriat
 	If the prefix starts with `ark:` we then can use n2t.net as the resolver and send a new GET request
 		GET http://n2t.net/ark:67531
 
-	If these requests fail you may try identifiers.org as a resolver. As it is a centeral resolver that handles many prefixes.
+	If these requests fail you may try identifiers.org as a resolver. As it is a central resolver that handles many prefixes.
 		GET http://identifiers.org/dg.4503 or GET http://identifiers.org/ark:67531
 
 	If all of these fail then this DRS URI cannot be resolved
 
-If these requests return a 302 with the correct URL to send a new GET request to. A DRS implemntation CAN cache this new URL and use it until it doesn't work any more
+If these requests return a 302 with the correct URL to send a new GET request to. A DRS implementation CAN cache this new URL and use it until it doesn't work any more
 	GET http://<NEW URL>/dg.4503/182
 
 There is no need to pass any authorization headers to the resolution service
