--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -11,16 +11,143 @@ The primary functionality of DRS is to map a logical ID to a means for physicall
 Each implementation of DRS can choose its own id scheme, as long as it follows these guidelines:
 
 * DRS IDs are strings made up of uppercase and lowercase letters, decimal digits, hypen, period, underscore and tilde [A-Za-z0-9.-_~]. See https://tools.ietf.org/html/rfc3986#section-2.3[RFC 3986 § 2.3].
-* Note to server implementors: internal IDs can contain other characters, but they MUST be encoded into valid DRS IDs whenever exposed by the API.   
+* Note to server implementors: internal IDs can contain other characters, but they MUST be encoded into valid DRS IDs whenever exposed by the API.  This is because non-URL encoded IDs may interfere with the interpretation of the `objects/{id}/access` endpoint.  To overcome this limitation use percent-encoding of the ID. See https://tools.ietf.org/html/rfc3986#section-2.4[RFC 3986 § 2.4]
 * One DRS ID MUST always return the same object data (or, in the case of a collection, the same set of objects). This constraint aids with reproducibility.
 * DRS v1 does NOT support semantics around multiple versions of an object. (For example, there’s no notion of “get latest version” or “list all versions”.) Individual implementation MAY choose an ID scheme that includes version hints.
 * DRS implementations MAY have more than one ID that maps to the same object.
 
 === DRS URIs
 
-For convenience, including when passing content references to a WES server, we define a URI syntax for DRS-accessible content. Strings of the form `drs://<server>/<id>` mean _“you can fetch the content with DRS id `<id>` from the DRS server at `<server>` "_.
+For convenience, including when passing content references to a WES server, we define a
+[URI scheme](https://en.wikipedia.org/wiki/Uniform_Resource_Identifier#Generic_syntax)
+for DRS-accessible content See https://tools.ietf.org/html/rfc3986#section-3.1[RFC 3986 § 3.1].
+We felt it was important to introduce a DRS scheme for URIs
+since it signals to systems consuming these URIs that the response they will ultimately
+receive, once transforming the URI to a fetchable URL, will be a DRS JSON.
+If we had gone with a Compact URI (CURIE) we felt that this would have been more
+difficult for systems consuming DRS objects to understand and differentiate them
+given the ubiquitous use of CURIEs in the research community and the fact that
+CURIEs can point to a wide variety of entities (HTML documents, PDFs, identities in data
+models, etc).
+
+There are two styles of DRS URI based on whether or not a compact identifier is used:
+Hostname-based and Compact Identifier-based.
+
+==== Compact Identifier-based DRS URIs
+
+Compact identifiers refer to locally-unique persistent identifiers that have been
+namespaced to provide global uniqueness. See ["Uniform resolution of compact identifiers
+for biomedical data"](https://www.biorxiv.org/content/10.1101/101279v3) for an excellent guide
+to this topic.  We support the use of compact identifiers in DRS URIs since many resources
+in the research community issue these identifiers of a variety of formats.
+
+When combined with the resolver registry services of
+[identifiers.org](https://identifiers.org/)/[n2t.net (Name-To-Thing)](https://n2t.net/),
+we can support any registered form of compact identifiers (Arks, DOIs, Data GUIDs, etc)
+and also allow for the resolution of
+DRS objects without needing to use a hostname in the URI.  By using compact identifiers with a resolver
+registry, systems using DRS URIs can identify the current resolver when needed.
+This allows a project to issue compact identifiers in DRS URIs and not be concerned
+if the project name or hostname change in the future since the current resolver can always
+be found through the identifiers.org/n2t.net registries.
+
+To make this work we embrace the CURIE format used by identifiers.org/n2t.net.  Compact
+identifiers have the form:
+
+    prefix:accession
+
+The prefix can be divided into an optional provider code and the namespace.  The accession here is an Ark,
+DOI, Data GUID ID, or one of the ~700 compact identifiers in the identifiers.org/n2t.net system:
+
+    [provider_code/]namespace:ID
+
+Examples include (from n2t.net):
+
+		PDB:2gc4
+		Taxon:9606
+		DOI:10.5281/ZENODO.1289856
+		ark:/47881/m6g15z54
+		IGSN:SSH000SUA
+
+---
+**NOTE**
+If your DRS implementation will issue IDs and pass around references with DRS URIs
+with compact identifiers you *must* register your prefix on identifiers.org/n2t.net
+otherwise DRS clients will not know how to resolve your compact identifiers and,
+ultimately, generate a DRS URL that can be accessed.
+---
+
+Translating the identifiers.org/n2t.net to DRS URIs we get the following URI form:
+
+    drs://[provider_code/]namespace:ID
+
+DRS URIs using compact identifiers with resolvers registered in identifiers.org/n2t.net
+can be distinguished from the hostname-based DRS URIs below based on the required ":"
+which is not allowed in hostname-based URI.
+
+As mentioned in the DRS IDs section, when IDs from compact identifiers are
+used as DRS URIs they must be
+
+See the documentation on [n2t.net](https://n2t.net/e/compact_ids.html) and
+[identifiers.org](https://docs.identifiers.org/) for much more information on
+the compact identifiers used there and details about the resolution process.
+You can also register new prefixes or mirrors (additional resource providers).
+
+---
+**NOTE**
+A DRS client identifies the a DRS URI using compact identifiers with the ":"
+character which is not allowed in provider_code, the namespace, or the ID.
+It is also not allowed in a Hostname-based DRS URI.
+Once the provider_code (optional) and namespace are extracted from a DRS URI,
+a client can use services on identifiers.org to identify available resolvers
+for example, for a Data GUID namespace:
+
+    GET https://registry.api.identifiers.org/restApi/namespaces/search/findByPrefix?prefix=dg
+
+Followed by (assuming the prefix ID for Data GUIDs is 1234):
+
+    GET https://registry.api.identifiers.org/restApi/resources/search/findAllByNamespaceId?id=1234
+
+This returns enough information to, ultimately, identify one or more resolvers and each
+have a URL prefix that, for DRS-supporting systems, tells how to make a successful DRS request.
+For example a DRS URI would look like:
+
+    drs://dg:4503/00e6cfa9-a183-42f6-bb44-b70347106bbe
+
+Looking up the resolver on identifiers.org would tell you the URL pattern to get a DRS response would be:
+
+    https://dataguids.org/ga4gh/drs/v1/objects/dg.{$id}
+
+And that can then be translated to:
+
+    GET https://dataguids.org/ga4gh/drs/v1/objects/dg.4503%2F00e6cfa9-a183-42f6-bb44-b70347106bbe
+
+IDs in DRS URIs/URLs are always percent-encoded to eliminate ambiguity.
+
+**Please keep in mind identifiers.org/n2t.net does not support directly resolving URI encoded IDs.
+ So we recommend this approach above to looking up resolvers on these registries and then making a valid
+DRS GET request directly.  This approach is also useful for caching resolvers since they are
+unlikely to change frequently.**
+---
+
+==== Hostname-based DRS URIs
+
+Strings of the form `drs://<server>/<id>` mean _“you can fetch the content with DRS id `<id>` from the DRS server at `<server>` "_.
 
 For example, if a WES server was asked to process `drs://drs.example.org/314159`, it would know that it could issue a GET request to `https://drs.example.org/ga4gh/drs/v1/objects/314159` to learn how to fetch that object.
+
+The protocol is always https and the port is always the standard 443 SSL port.  It would be invalid to include,
+for example, a port in the DRS URI.
+
+As with DRS URIs based on compact identifiers, the ID is percent-encoded to ensure special characters
+do not interfere with subsequent DRS endpoint calls.  As such, ":" is not allowed in the URI.
+
+---
+**NOTE**
+In the future, as newer versions of DRS are released, multiple versions of DRS may be supported on the same server.  Using the hostname in the DRS URI, plus information in the [service-registry](https://github.com/ga4gh-discovery/ga4gh-service-registry) standard endpoint, 
+which lead to [service-info](https://github.com/ga4gh-discovery/ga4gh-service-info) endpoints, a client can discover enough information to
+translate a DRS URI into a valid URL.
+---
 
 === DRS Datatypes
 
@@ -41,7 +168,7 @@ The DRS API specification is written in OpenAPI and embodies a RESTful service p
 
 === Making DRS Requests
 
-The DRS implementation is responsible for defining and enforcing an authorization policy that determines which users are allowed to make which requests. GA4GH recommends that DRS implementations use an OAuth 2.0 https://oauth.net/2/bearer-tokens/[bearer token], although they can choose other mechanisms if appropriate. 
+The DRS implementation is responsible for defining and enforcing an authorization policy that determines which users are allowed to make which requests. GA4GH recommends that DRS implementations use an OAuth 2.0 https://oauth.net/2/bearer-tokens/[bearer token], although they can choose other mechanisms if appropriate.
 
 === Fetching DRS Objects
 
